src/test/fail/exceptions/multi_in_single.lly
#[
SyntaxError: Multi-line block within single-line block.
Where: File "multi_in_single.lly" at line 11
]#

var v = 10

try:
    1 / 0
except DivisionByZeroError as e:
    try: {
        1 / 0
    except DivisionByZeroError as e2:
        v = 10
    }
